# tw-discord-bot

./: .env  .gitignore  Cargo.toml  ally.txt  player.txt  readme.md  update.csv  village.txt
data/: village.txt
src/: main.rs
src/api/: mod.rs  models.rs  reports.rs  tribalapi.rs
src/commands/: misc.rs  mod.rs  trib_interact.rs  tribal.rs  tribe.rs
