[package]
name = "hugger_two"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
reqwest = "0.11.9"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
regex = "1"
urlencoding = "2.1.0"
headless_chrome = "0.9.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend", "unstable_discord_api", "collector"]
version = "0.10.10"